--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,8 +10,8 @@
     "isolatedModules": true,
 
     /* Strictness */
-    "strict": true,
-    "noUncheckedIndexedAccess": true,
+    "strict": false,
+    "noUncheckedIndexedAccess": false,
     "checkJs": true,
 
     /* Bundled projects */
