--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "nodemailer": "^6.9.12",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hot-toast": "^2.4.1",
     "react-otp-input": "^3.1.1",
     "zod": "^3.22.4"
   },
